@@ -1,0 +1,45 @@
+function a = cgal_trifacet_area(tri, x)
+% CGAL_TRIFACET_AREA  Area of the facets in a triangular mesh
+%
+% A = cgal_trifacet_area(TRI, X)
+%
+%   TRI is a 3-column matrix. Each row contains the 3 nodes that form one
+%   triangular facet in the mesh.
+%
+%   X is a 3-column matrix. X(i, :) contains the xyz-coordinates of the
+%   i-th node in the mesh.
+%
+%   A is a vector with the same number of rows as TRI. A(i) is the area of
+%   the triangle TRI(i).
+
+% Author: Ramon Casero <rcasero@gmail.com>
+% Copyright © 2013 University of Oxford
+% Version: 0.1.0
+% $Rev$
+% $Date$
+%
+% University of Oxford means the Chancellor, Masters and Scholars of
+% the University of Oxford, having an administrative office at
+% Wellington Square, Oxford OX1 2JD, UK. 
+%
+% This file is part of Gerardus.
+%
+% This program is free software: you can redistribute it and/or modify
+% it under the terms of the GNU General Public License as published by
+% the Free Software Foundation, either version 3 of the License, or
+% (at your option) any later version.
+%
+% This program is distributed in the hope that it will be useful,
+% but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details. The offer of this
+% program under the terms of the License is subject to the License
+% being interpreted in accordance with English Law and subject to any
+% action against the University of Oxford being under the jurisdiction
+% of the English Courts.
+%
+% You should have received a copy of the GNU General Public License
+% along with this program.  If not, see
+% <http://www.gnu.org/licenses/>.
+
+error('MEX file not found')
