@@ -1,3 +1,12 @@
+2013-06-24  Ramon Casero  <rcasero@gmail.com>
+
+	* matlab/CgalToolbox/CgalTriFacetArea.cpp: (0.1.0)
+	* matlab/CgalToolbox/cgal_trifacet_area.m: (0.1.0)
+	* matlab/test/test_cgal_trifacet_area.m: (0.1.0)
+	* matlab/CgalToolbox/CMakeLists.txt: (0.2.6)
+
+	- Add CGAL_TRIFACET_AREA Area of the facets in a triangular mesh.
+
 2013-06-23  Ramon Casero  <rcasero@gmail.com>
 
 	* release 0.10.0:
